...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/editTextMerchantTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"

                    android:ems="10"
                    android:inputType="textPersonName"
...



    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/close"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/close"
        app:layout_constraintStart_toStartOf="@+id/view"
...
