...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expenses_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginStart="10dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="10dp"
...
